--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,22 @@
-# build output
-dist/
+# Dependencies
+node_modules/
+package-lock.json
 
-# generated types
+# Build outputs
+dist/
 .astro/
 
-# dependencies
-node_modules/
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# environment variables
+# Environment variables
 .env
-.env.production
+.env.local
 
-# macOS-specific files
-.DS_Store
-
-# jetbrains setting folder
+# IDE
+.vscode/
 .idea/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
